# Logic-Gates-Simulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: Gate.h  main.h
src/: Cate.cpp  circuit.cpp  circuit.h  gate.cpp  gate.h  main.cpp  main.h
